issue #5 - update title and icon  * update title and icon  * change Syrup to Sauce  * update variable names

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="%REACT_APP_NODE_3%" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/wagyuswap.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Meta -->
@@ -25,7 +25,7 @@
       content="The most popular AMM on BSC! Earn Wagyu through yield farming or win it in the Lottery, then stake it in Sauce Pools to earn more tokens! Initial Farm Offerings (new token launch model pioneered by WagyuSwap), NFTs, and more, on a platform you can trust."
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="🥞 WagyuSwap - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
+    <meta name="twitter:title" content="WagyuSwap - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
     <!-- GTAG -->
     <script>
       ;(function (w, d, s, l, i) {
