--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <title>WagyuSwap</title>
     <meta
       name="description"
-      content="Cheaper and faster than Uniswap? Discover WagyuSwap, the leading DEX on Binance Smart Chain (BSC) with the best farms in DeFi and a lottery for WAGYU."
+      content="Cheaper and faster than Uniswap? Discover WagyuSwap, the leading DEX on Velas Chain with the best farms in DeFi and a lottery for WAGYU."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -25,7 +25,7 @@
       content="The most popular AMM on BSC! Earn Wagyu through yield farming or win it in the Lottery, then stake it in Sauce Pools to earn more tokens! Initial Farm Offerings (new token launch model pioneered by WagyuSwap), NFTs, and more, on a platform you can trust."
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="WagyuSwap - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
+    <meta name="twitter:title" content="WagyuSwap - A next evolution DeFi exchange on Velas Chain" />
     <!-- GTAG -->
 <!--    <script>-->
 <!--      ;(function (w, d, s, l, i) {-->
