fix: minor issue

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:image" content="https://wagyuswap.herokuapp.com/images/hero.png" />
     <meta
       name="twitter:description"
-      content="The most popular AMM on VELAS CHAIN! Earn Wagyu through yield farming or win it in the Lottery, then stake it in Sauce Pools to earn more tokens! Initial Farm Offerings (new token launch model pioneered by WagyuSwap), NFTs, and more, on a platform you can trust."
+      content="The most popular AMM on Velas Chain! Earn Wagyu through yield farming or win it in the Lottery, then stake it in Sauce Pools to earn more tokens! Initial Farm Offerings (new token launch model pioneered by WagyuSwap), NFTs, and more, on a platform you can trust."
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="WagyuSwap - A next evolution DeFi exchange on Velas Chain" />
